--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
+        "@tailwindcss/vite": "^4.2.1",
+        "axios": "^1.13.5",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^4.2.1",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^6.0.4",
+        "vue": "^3.5.29",
+        "vue-router": "^5.0.3"
     }
 }
