--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^6.0.4",
+        "leaflet": "^1.9.4",
         "vue": "^3.5.29",
-        "vue-router": "^5.0.3"
+        "vue-router": "^5.0.3",
+        "vue3-toastify": "^0.2.8"
     }
 }
