--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.2.1",
-        "vite": "^7.0.7"
+        "vite": "^7.0.7",
+        "vite-plugin-pwa": "^1.2.0"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^6.0.4",
+        "chart.js": "^4.5.1",
         "leaflet": "^1.9.4",
         "vue": "^3.5.29",
+        "vue-chartjs": "^5.3.3",
         "vue-router": "^5.0.3",
         "vue3-toastify": "^0.2.8"
     }
